--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -34,6 +34,36 @@ mixin home()
                 span В избранное
               a.btn-card.btn-red.mt5.mb5.ml15 Посмотреть полностью
     +e.main
+      +e.main-top
+        +e.main-header
+          +e('nav').nav
+            - for (var i = 0; i < 3; i++)
+              +e('a').nav-item(href='#') Меню пункт
+          +e.main-email.d-flex.align-items-center
+            +e('span').main-ico @
+            a(href='mailto:info@vendoram.ru') info@vendoram.ru
+          .d-flex.align-items-center
+            +e('i').main-ico.fa.fa-phone
+            .d-flex.flex-column
+              a(href='tel:88003553505') +8 800 355-35-05
+              +e('a').callback(href='#') Заказать обратный звонок
+        +e.main-content
+          +e('form').form
+            +e('input').form-input(placeholder='Я ищу...')
+            +e.form-select
+              +e('select').form-select-js
+                option
+                - for (var i = 1; i < 4; i++)
+                  option= `Пункт ${i}`
+            +e('button').search.btn-red(type='submit')
+              i.fa.fa-search
+          a.btn.btn-red.mr20(href='#') разместить резюме
+          a.btn.btn-red(href='#') Найти вакансии
+      +e.main-bottom
+        +e.main-circle
+        +e('h1').title Работа
+        +e('p').desc Сделайте грамотный выбор! Предлагаем размещение и продвижение на новой и перспективной площадке <span class="c-red">РаботаДНР</span>. Станьте первым и получайте максимум продаж, опережая конкурентов на несколько шагов. Полностью берем на себя все, что связано с размещением на маркетплейсе, эффективно управляем ценами и поставками
+        +e('img').main-bottom-img(src='assets/images/img1.png' img='')
     +e.footer
       -
         var footer = [
