--- a/src/shared/sass/vars.sass
+++ b/src/shared/sass/vars.sass
@@ -9,7 +9,7 @@ $red: #dd3d34
 $blue: #243b9b
 $gray: #a8a8a8
 
-$colors: (main: $main, white: $white)
+$colors: (main: $main, white: $white, red: $red)
 
 $sm: 575px
 $md: 767px
