--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -29,12 +29,12 @@
   &__dots2
     position: absolute
     bottom: 20px
-    right: 14%
+    right: 13%
   &__aside
     position: relative
     z-index: 1
-    width: 500px
-    padding: 25px 14px 25px 17px
+    width: 510px
+    padding: 25px 24px 25px 17px
     &-header
       display: flex
       align-items: center
@@ -45,7 +45,178 @@
         font-size: 19px
         font-weight: 700
   &__main
-    width: calc(100% - 500px)
+    position: relative
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    z-index: 2
+    width: calc(100% - 510px)
+    margin-top: 15px
+    &-top
+      position: relative
+      display: flex
+      flex-direction: column
+      height: calc(100% - 290px)
+      padding-top: 40px
+      background-color: $blue
+      border-radius: 33px 0
+      &:before
+        position: absolute
+        content: ''
+        top: 0
+        bottom: 0
+        left: 0
+        right: 0
+        opacity: 0.65
+        background-image: url(../images/bg.png)
+    &-header
+      position: relative
+      display: flex
+      align-items: center
+      letter-spacing: 0.17px
+      font-size: 14px
+      font-weight: 800
+      color: #ffffff
+      a
+        color: inherit
+        text-decoration: none
+        &:hover
+          color: $red
+    &-ico
+      margin-right: 10px
+      color: $red
+      font-size: 18px
+    &-email
+      margin-right: 50px
+    &-circle
+      +size(150px)
+      position: absolute
+      right: 0
+      top: 0
+      background-color: $red
+      border-bottom-left-radius: 100%
+    &-bottom
+      position: relative
+      height: 320px
+      margin-left: -60px
+      margin-top: -50px
+      color: #ffffff
+      background-color: #0253a3
+      border-radius: 0 33px
+      box-shadow: -9px 10px 29px 6px rgba(105, 105, 105, 0.24)
+      &-img
+        position: absolute
+        top: -25px
+        left: -50px
+    &-content
+      display: flex
+      align-items: center
+      margin-top: auto
+      margin-bottom: 70px
+  &__title
+    margin: 0
+    margin-left: 120px
+    font-size: 263px
+    font-weight: 800
+    line-height: 0.75
+    text-transform: uppercase
+  &__desc
+    width: 900px
+    margin-left: auto
+    margin-right: 390px
+    font-size: 16px
+    font-weight: 500
+    text-align: right
+  &__form
+    position: relative
+    display: flex
+    height: 40px
+    width: 540px
+    margin: 8px 25px 8px 40px
+    background-color: #fff
+    border-radius: 20px
+    &:before
+      $p: 8px
+      position: absolute
+      content: ''
+      top: -$p
+      left: -$p
+      bottom: -$p
+      right: -$p
+      border: 1px solid #ffffff
+      border-radius: 28px
+      opacity: 0.1
+    &-input
+      position: relative
+      flex-grow: 1
+      padding-left: 25px
+      border: none
+      background-color: transparent
+    &-select
+      position: relative
+      &:after
+        position: absolute
+        content: ''
+        left: 0
+        top: 11px
+        height: 18px
+        width: 2px
+        background-color: $red
+        opacity: 0.26
+      .select2
+        width: 120px !important
+      .select2-container .select2-selection--single .select2-selection__rendered
+        display: flex
+        align-items: center
+      .select2,
+      .select2-selection__rendered,
+      .select2-container .select2-selection--single
+        height: 100%
+      .select2-container--default .select2-selection--single .select2-selection__arrow
+        top: 0
+        height: 100%
+      .select2-container--default .select2-selection--single
+        border: none
+      .select2-container .select2-selection--single .select2-selection__rendered
+        padding-left: 20px
+        padding-right: 30px
+      .select2-container--default .select2-selection--single .select2-selection__placeholder
+        color: $main
+      .select2-container--default .select2-selection--single .select2-selection__arrow b
+        top: 49%
+        margin-left: -17px
+        border-width: 7px 7px 0 7px
+        border-radius: 3px
+        &:after
+          position: absolute
+          top: -8px
+          left: -5px
+          content: ''
+          border-color: #fff transparent transparent transparent
+          border-style: solid
+          border-width: 5px 5px 0 5px
+      .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b
+        top: 46%
+        transform: rotate(180deg)
+        border-color: #888 transparent transparent transparent
+  &__callback
+    letter-spacing: 0.12px
+    color: #fcf46b !important
+    font-size: 9px
+    font-weight: 500
+    &:hover
+      color: #ffffff !important
+  &__search
+    position: relative
+    width: 51px
+    border: none
+    border-radius: 20px
+    cursor: pointer
+  &__nav
+    margin-left: 12%
+    margin-right: 80px
+    &-item
+      padding: 3px 15px
   &__footer
     position: relative
     z-index: 1
