--- a/src/components/layout-default/layout-default.pug
+++ b/src/components/layout-default/layout-default.pug
@@ -15,6 +15,7 @@ html(lang='ru')
     link(href='assets/libs/bootstrap/bootstrap-grid.min.css' rel='stylesheet')
     link(href='assets/libs/slick/slick.css' rel='stylesheet')
     link(href='assets/libs/font-awesome-4.7.0/css/font-awesome.css' rel='stylesheet')
+    link(href='assets/libs/select2/select2.min.css' rel='stylesheet')
     link(href='assets/css/style.css' rel='stylesheet')
   body
     .root
@@ -24,4 +25,5 @@ html(lang='ru')
       +footer()
     script(src='assets/libs/jquery-3.3.1.min.js')
     script(src='assets/libs/slick/slick.min.js')
+    script(src='assets/libs/select2/select2.min.js')
     script(src='assets/js/script.js')
