--- a/src/shared/sass/buttons.sass
+++ b/src/shared/sass/buttons.sass
@@ -1,6 +1,26 @@
 @import "imports"
 
 .btn
+  position: relative
+  padding: 14px 27px
+  margin: 8px
+  text-decoration: none
+  letter-spacing: 1.1px
+  font-weight: 800
+  text-transform: uppercase
+  font-size: 11px
+  border-radius: 20px
+  &:before
+    $p: 8px
+    position: absolute
+    content: ''
+    top: -$p
+    left: -$p
+    bottom: -$p
+    right: -$p
+    border: 1px solid #ffffff
+    border-radius: 28px
+    opacity: 0.1
   &-card
     $py: 6px
     $px: 15px
