tablet and mobile

--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -13,8 +13,8 @@ mixin home()
           +b.single-card
             +e.tr
             div
-              a.btn-card.btn-card-small.btn-gray(href='#') Мода и стиль
-            +e('h3').title.mt5.mb0 Рюкзак из натуральной крокодильей кожи, размеры 30х35 см
+              a.btn-card.btn-card-small.btn-gray(href='#') Бухгалтерия, аудит
+            +e('h3').title.mt5.mb0 Руководитель финансового отделения
             +e.info-second
               span.mr10 Добавлено: 19 марта 2018, 17:15
               +e.view
@@ -22,18 +22,30 @@ mixin home()
                 span 255
               a.d-flex.align-items-center.ml-auto.mt5.mb5(href='#')
                 +e('img').icon(src='assets/images/arr-place.png' alt='')
-                span.ml5 Санкт - Петербург
+                span.ml5 Донецк
             +e.info
-              p Размер: 30/35см
-              p Материал: натуральная кожа супер качество!
-              p Форму держит, на змейке внутри, носиться как сумкой так и рюкзаком!
-              p Цвет: чёрная
+              p Работа в транспортной компании:
+              p - ведение плана счетов, авансовых отчетов, кассы- помощь финансистам.
+              p -участие в расчете себестоимости, коммерческих предложений
+              p Занятость: полная
             .d-flex.flex-wrap.align-items-center.justify-content-end.mt-auto
               +e('a').like.mt5.mb5(href='#')
                 i.fa.fa-heart-o
                 span В избранное
               a.btn-card.btn-red.mt5.mb5.ml15 Посмотреть полностью
     +e.main
+      +b.white-line
+        +e.square
+      +b.white-line
+        +e.square
+        +e.square
+      +b.white-line
+        +e.square
+      +b.white-line
+        +e.square
+      +b.white-line
+        +e.square
+        +e.square
       +e.main-top
         +e.main-header
           +e('nav').nav
