--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -7,34 +7,63 @@
   height: 100vh
   overflow: hidden
   background-color: $bg
+  @media (max-height: 700px)
+    height: 100%
+    overflow-y: auto
+    overflow-x: hidden
+  @media (max-width: 993px)
+    height: 100%
+    overflow-y: auto
+    overflow-x: hidden
   &__emblem
     position: absolute
     z-index: 3
     bottom: 0
     right: 0
+    @media (max-width: 1750px)
+      width: 300px
+      height: auto
+    @media (max-width: 1450px)
+      right: -100px
+      width: 230px
   &__circle
-    +size(545px)
+    +size(160px)
     position: absolute
     z-index: 2
     bottom: 0
     left: 0
     background-color: $red
-    border-radius: 50%
-    transform: translate(-50%, 50%)
+    //border-radius: 50%
+    border-radius: 0 100% 0 0 / 100% 100% 0 0
+    //transform: translate(-50%, 50%)
+    @media (max-width: 993px)
+      width: 100px
+      height: 100px
   &__dots1
     position: absolute
     bottom: 0
     left: 273px
     transform: translateX(-100%)
+    @media (max-width: 1750px)
+      left: 180px
+    @media (max-width: 769px)
+      display: none
   &__dots2
     position: absolute
     bottom: 20px
-    right: 13%
+    right: 9%
+    @media (max-width: 1450px)
+      display: none
   &__aside
     position: relative
     z-index: 1
-    width: 510px
+    width: 550px
     padding: 25px 24px 25px 17px
+    @media (max-width: 1750px)
+      width: 460px
+    @media (max-width: 993px)
+      order: 2
+      margin: auto
     &-header
       display: flex
       align-items: center
@@ -50,8 +79,14 @@
     flex-direction: column
     justify-content: space-between
     z-index: 2
-    width: calc(100% - 510px)
+    width: calc(100% - 550px)
     margin-top: 15px
+    @media (max-width: 1750px)
+      width: calc(100% - 460px)
+    @media (max-width: 993px)
+      order: 1
+      width: 100%
+      margin-top: 0
     &-top
       position: relative
       display: flex
@@ -59,7 +94,11 @@
       height: calc(100% - 290px)
       padding-top: 40px
       background-color: $blue
-      border-radius: 33px 0
+      border-radius: 33px 0 0
+      @media (max-width: 1750px)
+        height: calc(100% - 255px)
+      @media (max-width: 993px)
+        border-radius: 0
       &:before
         position: absolute
         content: ''
@@ -68,7 +107,8 @@
         left: 0
         right: 0
         opacity: 0.65
-        background-image: url(../images/bg.png)
+        background: url(../images/bg.png) no-repeat
+        background-size: cover
     &-header
       position: relative
       display: flex
@@ -77,6 +117,11 @@
       font-size: 14px
       font-weight: 800
       color: #ffffff
+      @media (max-width: 1350px)
+        flex-wrap: wrap
+        justify-content: flex-start
+      @media (max-width: 993px)
+        justify-content: center
       a
         color: inherit
         text-decoration: none
@@ -88,6 +133,14 @@
       font-size: 18px
     &-email
       margin-right: 50px
+      @media (max-width: 1350px)
+        margin-left: 50px
+      @media (max-width: 993px)
+        margin-left: 0
+      @media (max-width: 400px)
+        width: 100%
+        justify-content: center
+        margin: 0 auto 20px
     &-circle
       +size(150px)
       position: absolute
@@ -95,6 +148,10 @@
       top: 0
       background-color: $red
       border-bottom-left-radius: 100%
+      @media (max-width: 1450px)
+        right: -100px
+      @media (max-width: 769px)
+        display: none
     &-bottom
       position: relative
       height: 320px
@@ -102,31 +159,92 @@
       margin-top: -50px
       color: #ffffff
       background-color: #0253a3
-      border-radius: 0 33px
+      border-radius: 0 0 0 33px
       box-shadow: -9px 10px 29px 6px rgba(105, 105, 105, 0.24)
+      @media (max-width: 1750px)
+        height: 270px
+      @media (max-width: 993px)
+        margin-left: 0
+        border-radius: 0
+      @media (max-width: 769px)
+        height: 350px
+      @media (max-width: 576px)
+        display: flex
+        flex-direction: column
+        align-items: center
       &-img
         position: absolute
         top: -25px
         left: -50px
+        z-index: 2
+        @media (max-width: 1750px)
+          width: 200px
+          height: auto
+        @media (max-width: 1200px)
+          width: 170px
+        @media (max-width: 993px)
+          left: 0
+        @media (max-width: 576px)
+          top: -125px
+          left: auto
     &-content
       display: flex
       align-items: center
       margin-top: auto
-      margin-bottom: 70px
+      margin-bottom: 100px
+      z-index: 2
+      @media (max-width: 1350px)
+        flex-wrap: wrap
+        justify-content: flex-start
+        margin-bottom: 70px
+        margin-left: 50px
+      @media (max-width: 993px)
+        justify-content: center
+        margin-top: 40px
+        margin-left: 0
+      @media (max-width: 576px)
+        margin-bottom: 170px
+      & .btn
+        @media (max-width: 1350px)
+          margin-left: 0
+        @media (max-width: 400px)
+          margin: 20px 10px 20px !important
   &__title
     margin: 0
     margin-left: 120px
     font-size: 263px
     font-weight: 800
-    line-height: 0.75
+    line-height: 0.8
     text-transform: uppercase
+    @media (max-width: 1750px)
+      margin-left: 65px
+      font-size: 220px
+      line-height: 0.6
+    @media (max-width: 1450px)
+      font-size: 175px
+    @media (max-width: 1200px)
+      font-size: 127px
+    @media (max-width: 993px)
+      margin-left: 0
+      font-size: 24vw
+      text-align: center
   &__desc
     width: 900px
+    margin-top: 0
     margin-left: auto
     margin-right: 390px
     font-size: 16px
     font-weight: 500
     text-align: right
+    @media (max-width: 1750px)
+      width: 785px
+      margin-top: 25px
+    @media (max-width: 1450px)
+      width: 78%
+    @media (max-width: 993px)
+      width: 90%
+      margin: 40px auto 0
+      text-align: center
   &__form
     position: relative
     display: flex
@@ -135,6 +253,15 @@
     margin: 8px 25px 8px 40px
     background-color: #fff
     border-radius: 20px
+    @media (max-width: 1350px)
+      width: 80%
+      margin-left: 0
+      margin-bottom: 45px
+    @media (max-width: 993px)
+      margin-bottom: 20px
+    @media (max-width: 400px)
+      width: 94%
+      margin: 0 0 20px
     &:before
       $p: 8px
       position: absolute
@@ -152,6 +279,8 @@
       padding-left: 25px
       border: none
       background-color: transparent
+      @media (max-width: 400px)
+        width: 120px
     &-select
       position: relative
       &:after
@@ -183,7 +312,7 @@
       .select2-container--default .select2-selection--single .select2-selection__placeholder
         color: $main
       .select2-container--default .select2-selection--single .select2-selection__arrow b
-        top: 49%
+        top: 45%
         margin-left: -17px
         border-width: 7px 7px 0 7px
         border-radius: 3px
@@ -215,8 +344,23 @@
   &__nav
     margin-left: 12%
     margin-right: 80px
+    @media (max-width: 1350px)
+      display: flex
+      justify-content: flex-start
+      width: 100%
+      margin-left: 35px
+      margin-right: 0
+    @media (max-width: 993px)
+      justify-content: center
+      margin-left: 0
+    @media (max-width: 400px)
+      flex-direction: column
+      text-align: center
+      margin-bottom: 20px
     &-item
       padding: 3px 15px
+      @media (max-width: 1350px)
+        margin: 10px 0
   &__footer
     position: relative
     z-index: 1
@@ -226,12 +370,33 @@
     height: 70px
     margin-top: auto
     margin-left: 300px
+    @media (max-width: 1750px)
+      height: 60px
+      margin-left: 200px
+    @media (max-width: 1450px)
+      width: 75%
+      height: 70px
+    @media (max-width: 993px)
+      order: 3
+      width: auto
+      height: auto
+      margin: auto
+    @media (max-width: 576px)
+      margin-bottom: 100px
     &-item
       padding-right: 20px
       color: $blue
       font-size: 15px
       font-weight: 500
       text-decoration: none
+      @media (max-width: 1750px)
+        font-size: 14px
+      @media (max-width: 1450px)
+        width: 240px
+        margin-right: auto
+      @media (max-width: 993px)
+        margin: 5px 0
+        padding: 0
 
 .logo
   display: flex
@@ -261,6 +426,10 @@
   padding: 20px 55px 10px 25px
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.15)
   background-color: #fff
+  @media (max-width: 993px)
+    margin-left: 5px
+    margin-right: 0
+    padding: 20px
   &__title
     max-width: 555px
     font-size: 15px
@@ -317,3 +486,47 @@
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.15)
       background-color: #fff
       transform: translateY(50%) rotate(45deg)
+
+.white-line
+  position: absolute
+  top: 0
+  left: 90px
+  display: flex
+  justify-content: center
+  width: 1px
+  height: 100%
+  background-color: rgba(251, 251, 245, .2)
+  z-index: 1
+  &__square
+    position: absolute
+    top: 20px
+    display: block
+    width: 16px
+    height: 16px
+    background-color: #ffffff
+  &:nth-child(2)
+    left: 295px
+    & .white-line__square
+      top: 30%
+      &:nth-child(2)
+        top: auto
+        bottom: -8px
+  &:nth-child(3)
+    left: 500px
+    & .white-line__square
+      top: 20%
+      @media (max-width: 1350px)
+        top: 25%
+  &:nth-child(4)
+    left: 700px
+    & .white-line__square
+      top: 10%
+      @media (max-width: 1350px)
+        top: 20%
+  &:nth-child(5)
+    left: 910px
+    & .white-line__square
+      top: 30%
+      &:nth-child(2)
+        top: auto
+        bottom: -8px
