--- a/src/shared/sass/buttons.sass
+++ b/src/shared/sass/buttons.sass
@@ -10,6 +10,7 @@
   text-transform: uppercase
   font-size: 11px
   border-radius: 20px
+  white-space: nowrap
   &:before
     $p: 8px
     position: absolute
