--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -226,8 +226,10 @@
       font-size: 127px
     @media (max-width: 993px)
       margin-left: 0
-      font-size: 24vw
+      font-size: 21vw
       text-align: center
+    @media (max-width: 576px)
+      font-size: 22vw
   &__desc
     width: 900px
     margin-top: 0
