--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -70,7 +70,7 @@ mixin home()
             +e('button').search.btn-red(type='submit')
               i.fa.fa-search
           a.btn.btn-red.mr20(href='#') разместить резюме
-          a.btn.btn-red(href='#') Найти вакансии
+          a.btn.btn-red(href='all-vacancies.html') Найти вакансии
       +e.main-bottom
         +e.main-circle
         +e('h1').title Работа
