--- a/src/shared/sass/1fonts.sass
+++ b/src/shared/sass/1fonts.sass
@@ -21,3 +21,9 @@
   src: url('../fonts/muller/MullerRegular.otf')
   font-weight: 400
   font-style: normal
+
+@font-face
+  font-family: 'Muller'
+  src: url('../fonts/muller/MullerLight.otf')
+  font-weight: 300
+  font-style: normal
