--- a/src/components/all-vacancies/all-vacancies.pug
+++ b/src/components/all-vacancies/all-vacancies.pug
@@ -120,7 +120,7 @@ mixin all-vacancies()
                   a.d-flex.align-items-center.ml-auto.mt5.mb5(href='#')
                     +e('img').icon(src='assets/images/arr-place.png' alt='')
                     span.ml5 Санкт-Петербург
-                  +e('img')(src='assets/images/vacancies_logo.png' alt='').info-second__image
+                  +e('img')(src='assets/images/logo_company.svg' alt='').info-second__image
                 +e('span').price 260-400 EUR
                 +e.info
                   p Форму держит, на змейке внутри, носится как сумкой так и рюкзаком
