--- a/src/components/single-vacancy/single-vacancy.pug
+++ b/src/components/single-vacancy/single-vacancy.pug
@@ -61,7 +61,7 @@ mixin single-vacancy()
           +b.sidebar-inner
             +b.sr-block
               +e.image
-                +e('img')(src='assets/images/vacancies_logo.png' alt='')
+                +e('img')(src='assets/images/logo_company.svg' alt='')
               +e.text
                 +e('h3').text__company Компания:
                 +e('p').text__c-name Bernas Company
