--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -3,6 +3,7 @@
 .header-wrap
   position: relative
   background: #243b9b
+  z-index: 8
   @media (max-width: 993px)
     overflow: hidden
 
@@ -61,7 +62,7 @@
 
   & .home__form
     width: 540px
-    margin-bottom: 0
+    margin-bottom: 8px
     @media (max-width: 1200px)
       width: 50%
     @media (max-width: 993px)
