--- a/src/shared/sass/buttons.sass
+++ b/src/shared/sass/buttons.sass
@@ -2,7 +2,7 @@
 
 .btn
   position: relative
-  padding: 14px 27px
+  padding: 15px 27px 13px
   margin: 8px
   text-decoration: none
   letter-spacing: 1.1px
@@ -23,10 +23,8 @@
     border-radius: 28px
     opacity: 0.1
   &-card
-    $py: 6px
-    $px: 15px
     display: inline-block
-    padding: $py $px
+    padding: 7px 15px 5px
     font-weight: 500
     font-size: 11px
     color: white
@@ -38,7 +36,7 @@
     cursor: pointer
     transition: $transition
     &-small
-      padding: 3px 10px
+      padding: 4px 10px 3px
   &-gray
     color: #ffffff
     background-color: $gray
