--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -27,11 +27,28 @@
 .v-content-top
   display: flex
   align-items: center
+  margin-left: -95px
+  @media (max-width: 1400px)
+    margin-left: -45px
+  @media (max-width: 1250px)
+    margin-left: 75px
+  @media (max-width: 1200px)
+    margin-left: -15px
+  @media (max-width: 993px)
+    justify-content: space-around
+    margin-left: 0
+  @media (max-width: 768px)
+    justify-content: space-between
+  @media (max-width: 500px)
+    flex-direction: column
+    margin-top: 30px
 
 .vacancies-days
   display: flex
   align-items: center
   margin: 20px 95px
+  @media (max-width: 993px)
+    margin: 20px 0
 
   &__text
     margin-right: 5px
@@ -85,6 +102,7 @@
 .v-content-bottom
   display: flex
   align-items: flex-start
+  justify-content: center
   width: 100%
   margin-bottom: 100px
 
@@ -92,23 +110,63 @@
     display: flex
     flex-direction: column
     align-items: center
-    width: 270px
-    padding-top: 40px
+    min-width: 275px
+    z-index: 2
+    @media (max-width: 993px)
+      position: fixed
+      bottom: 0
+      right: 0
+      width: 450px
+      height: 70%
+      padding-top: 20px
+      background-color: #ffffff
+      transform: translateX(600px)
+      transition: all ease 1s
+      z-index: 9
+    @media (max-width: 500px)
+      width: 300px
+      padding-top: 40px
+
+    & .sidebar-inner
+      background-color: #f8f8f8
+      @media (max-width: 993px)
+        height: 100%
+        margin-bottom: 20px
+        background-color: #ffffff
+        overflow-y: scroll
 
   &__center
     display: flex
     flex-direction: column
+    margin-right: 40px
+    @media (max-width: 478px)
+      width: 100%
 
     & .single-card
       width: 650px
-      @media (max-width: 1300px)
-        width: 630px
+      @media (max-width: 1400px)
+        width: 550px
+        padding-right: 25px
+      @media (max-width: 1250px)
+        width: 650px
+      @media (max-width: 768px)
+        width: 100%
+        margin-left: 0
+
+      &__title
+        @media (max-width: 478px)
+          width: 83%
 
       &__info-second
         position: relative
+        @media (max-width: 330px)
+          flex-direction: column
+          align-items: flex-start
 
         & a
           margin-right: 90px
+          @media (max-width: 478px)
+            margin-left: 0 !important
 
         &__image
           position: absolute
@@ -130,11 +188,17 @@
         &__soc
           display: flex
           align-items: center
+          @media (max-width: 380px)
+            flex-wrap: wrap
 
           & span
             margin-right: 20px
             font-weight: 500
             color: #000104
+            @media (max-width: 768px)
+              margin-right: 10px
+            @media (max-width: 380px)
+              width: 100%
 
           & a
             display: flex
@@ -144,6 +208,8 @@
             height: 18px
             margin-right: 10px
             border-radius: 50%
+            @media (max-width: 380px)
+              margin: 10px 10px 10px 0
 
             & img
               width: 11px
@@ -151,6 +217,8 @@
 
       & .btn-card
         position: relative
+        @media (max-width: 577px)
+          margin-left: 0 !important
 
         &:before
           position: absolute
@@ -161,10 +229,10 @@
           width: 1px
           height: 24px
           background-color: #ffe1df
+          @media (max-width: 577px)
+            display: none
 
-  &__right
-    display: flex
-    flex-direction: column
+
 
 .vk-bg
   background-color: #457ba1
@@ -174,102 +242,6 @@
 
 .fb-bg
   background-color: #125199
-
-.vr-card-head
-  background-color: #ffffff
-  border: 1px solid #e2e3e7
-  border-radius: 2px
-
-  & > img
-    width: 100%
-    height: auto
-
-  &__bottom
-    display: flex
-    align-items: center
-    padding: 5px 10px
-
-    & p
-      margin: 0 0 0 8px
-      font-weight: 800
-      font-size: 12px
-      line-height: 1
-
-    & span
-      margin-left: auto
-      color: #c6ceda
-
-.vr-text
-  margin-top: 8px
-  padding: 10px
-  background-color: #ffffff
-
-  & p
-    margin: 0
-    font-weight: 700
-    font-size: 10px
-
-.vr-card
-  width: 275px
-  margin-top: 10px
-  padding: 10px 0
-  background-color: #ffffff
-  border: 1px solid #e2e3e7
-  border-radius: 2px
-
-.vr-card-block
-  position: relative
-  display: flex
-  flex-direction: column
-  padding: 15px 10px
-  font-size: 10px
-  border-top: 1px solid #eef0f2
-  border-bottom: 1px solid #eef0f2
-
-  &:before
-    position: absolute
-    top: 0
-    left: 10px
-    content: ''
-    width: 40px
-    height: 1px
-    background-color: #6e86a9
-
-  &__head
-    display: flex
-    align-items: center
-
-    &__image
-      display: flex
-      align-items: center
-      justify-content: center
-      width: 25px
-      height: 25px
-      margin-right: 10px
-      border-radius: 50%
-      overflow: hidden
-
-      & img
-        object-fit: cover
-
-    &__name
-      display: flex
-      flex-direction: column
-      align-items: flex-start
-
-      & p
-        margin: 0
-        color: #538cbd
-
-      & span
-        color: #c6ceda
-
-    & > span
-      display: flex
-      align-items: flex-start
-      height: 25px
-      margin-left: auto
-      color: #c6ceda
 
 .checkbox input
   position: absolute
@@ -321,8 +293,9 @@
 .vl-block
   display: flex
   flex-direction: column
-  width: 270px
+  width: 265px
   margin-top: 20px
+  margin-left: 10px
   padding-bottom: 15px
   border-bottom: 1px dotted #b8b8b8
 
@@ -369,8 +342,75 @@
 .vl-btn
   width: 90%
   margin-top: 5px
-  margin-left: 5px
+  margin-bottom: 10px
+  margin-left: 15px
   padding: 14px
 
 .no-border
   border: none
+
+.filter-btn
+  position: fixed
+  bottom: 15%
+  left: 50%
+  display: none
+  padding: 15px 40px
+  font-family: 'Muller', sans-serif
+  font-weight: 800
+  font-size: 11px
+  text-transform: uppercase
+  letter-spacing: 1.1px
+  color: #ffffff
+  background-image: linear-gradient(to left, #dd3d34 0%, #af2a22 99%, #af2a22 100%)
+  border: none
+  border-radius: 20px
+  outline: none
+  cursor: pointer
+  transform: translateX(-50%)
+  z-index: 6
+  @media (max-width: 993px)
+    display: block
+
+.filter-overlay
+  position: fixed
+  top: 0
+  left: 0
+  width: 100vw
+  height: 100vh
+  background-color: #282828
+  opacity: 0
+  transition: all ease 1s
+  z-index: -1
+
+.active-filter
+  transform: translateX(0)
+  transition: all ease 1s
+
+.active-filter-overlay
+  opacity: 0.38
+  transition: all ease 1s
+  z-index: 8
+
+.filter-close
+  position: absolute
+  top: 20px
+  left: 15px
+  display: none
+  align-items: center
+  justify-content: center
+  width: 15px
+  height: 15px
+  @media (max-width: 993px)
+    display: flex
+
+  & span
+    position: absolute
+    width: 15px
+    height: 2px
+    background-color: #000000
+
+    &:first-child
+      transform: rotate(45deg)
+
+    &:last-child
+      transform: rotate(-45deg)
