--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -49,8 +49,9 @@ mixin home()
       +e.main-top
         +e.main-header
           +e('nav').nav
-            - for (var i = 0; i < 3; i++)
-              +e('a').nav-item(href='#') Меню пункт
+            +e('a').nav-item(href='index.html') Главная
+            +e('a').nav-item(href='resume.html') Резюме
+            +e('button').nav-item.jsLogin Вход
           +e.main-email.d-flex.align-items-center
             +e('span').main-ico @
             a(href='mailto:info@vendoram.ru') info@vendoram.ru
