--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -166,12 +166,12 @@
       @media (max-width: 993px)
         margin-left: 0
         border-radius: 0
-      @media (max-width: 769px)
-        height: 350px
       @media (max-width: 576px)
         display: flex
         flex-direction: column
         align-items: center
+      @media (max-width: 375px)
+        height: 320px
       &-img
         position: absolute
         top: -25px
@@ -196,7 +196,7 @@
       @media (max-width: 1350px)
         flex-wrap: wrap
         justify-content: flex-start
-        margin-bottom: 70px
+        margin-bottom: 100px
         margin-left: 50px
       @media (max-width: 993px)
         justify-content: center
@@ -233,7 +233,7 @@
   &__desc
     width: 900px
     margin-top: 0
-    margin-left: auto
+    margin-left: 30px
     margin-right: 390px
     font-size: 16px
     font-weight: 500
@@ -361,8 +361,16 @@
       margin-bottom: 20px
     &-item
       padding: 3px 15px
+      font-size: 14px
+      font-weight: 800
+      color: #ffffff
+      background: none
+      border: none
+      cursor: pointer
       @media (max-width: 1350px)
         margin: 10px 0
+      &:hover
+        color: $red
   &__footer
     position: relative
     z-index: 1
