all resume page

--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -1,6 +1,6 @@
 @import "../../shared/sass/imports"
 
-.all-vacancies
+.all-block
   position: relative
   background-color: #f8f8f8
 
@@ -141,6 +141,7 @@
     margin-right: 40px
     @media (max-width: 478px)
       width: 100%
+      margin-right: 10px
 
     & .single-card
       width: 650px
@@ -242,6 +243,9 @@
 
 .fb-bg
   background-color: #125199
+
+.inst-bg
+  background-color: #C13584
 
 .checkbox input
   position: absolute
