--- a/src/components/resume/resume.pug
+++ b/src/components/resume/resume.pug
@@ -58,6 +58,7 @@ mixin resume()
             +e.item
               +e('h4').title-main Образование
               +e('h4').title-bold Горловский жилищно-комунальный техникум
+              +e('p').text Факультет - факультет
               +e('p').text Горловка <br>Среднее специальное, <br>с 09.1995 по 03.1999 (3 года 6 месяцев)
             +e.item
               +e('h4').title-main Профессиональные и другие навык
@@ -94,6 +95,8 @@ mixin resume()
                   +e('img')(src='assets/images/ok.svg' alt='')
                 +b('a')(href='#').fb-bg
                   +e('img')(src='assets/images/fb.svg' alt='')
+                +b('a')(href='#').inst-bg
+                  +e('img')(src='assets/images/instagram.svg' alt='')
               +e('button').btn написать сообщение
               +e('a')(href='#').complain Пожаловаться на<br>это резюме
       +b.soc-sidebar#sidebar-vr
