--- a/src/components/all-resume/all-resume.pug
+++ b/src/components/all-resume/all-resume.pug
@@ -1,5 +1,5 @@
-mixin all-vacancies()
-  +b('section').all-block.all-vacancies
+mixin all-resume()
+  +b('section').all-block.all-resume
     +e('img')(src='assets/images/bg-dots.png' alt='').dots2
     +e.circle
     +e.content
@@ -12,13 +12,10 @@ mixin all-vacancies()
                 +e('img').main(src='assets/images/logo.png' alt='')
                 +e('img').info(src='assets/images/ico-i.png' alt='')
               +e('span').text Актуальных вакансий сейчас
-          +b.vacancies-days
-            +e('p').text Все вакансии Донецка за
-            +b('select').home__form-select-js
-              +e('option') 1 день
-              +e('option') 5 дней
-              +e('option') 10 дней
-              +e('option') 30 дней
+            +b.search
+              +e('input')(type='text' placeholder='Поиск')
+              +b('button').btn-red
+                +b('i').fa.fa-search
         +b.v-content-bottom.container-for-sidebar
           +b.filter-overlay.jsFilterOverlay
           +e.left.sidebar.jsOpenFilter#sidebar
@@ -26,6 +23,20 @@ mixin all-vacancies()
               +e('span')
               +e('span')
             +b.sidebar-inner
+              +b.vl-block
+                +e('select').cities.jsCitiesSelect
+                  +e('option') Донецк
+                  +e('option') Макеевка
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
+                  +e('option') Луганск
               +b.vl-block
                 +e.head.jsOpenCheck
                   +e('p') Требуемый опыт
@@ -111,28 +122,24 @@ mixin all-vacancies()
                   +e('input')(type='text')
               +b('button').vl-btn.btn-card.btn-red Применить
           +e.center
-            - for (var i = 0; i < 12; i++)
-              +b.single-card
-                +e.tr
-                div
-                  a.btn-card.btn-card-small.btn-gray(href='#') Мода и стиль
-                +e('h3').title.mt5.mb0 Рюкзак из натуральной крокодильей кожи ...
-                +e.info-second
-                  span.mr10 Добавлено: 19 марта 2018, 17:15
-                  +e.view
-                    +e('img').icon.mr5(src='assets/images/icon-eye.png' alt='')
-                    span 255
-                  a.d-flex.align-items-center.ml-auto.mt5.mb5(href='#')
-                    +e('img').icon(src='assets/images/arr-place.png' alt='')
-                    span.ml5 Санкт-Петербург
-                  +e('img')(src='assets/images/logo_company.svg' alt='').info-second__image
-                +e('span').price 260-400 EUR
-                +e.info
-                  p Форму держит, на змейке внутри, носится как сумкой так и рюкзаком
-                  p Цвет: чёрная
-                .d-flex.flex-wrap.align-items-center.mt-auto.justify-content-between
-                  +e.info__soc
-                    +e('span') Написать соискателю в сетях
+            +b.single-card-resume
+              +e.top
+                +e('img')(src='assets/images/resume_image_1.png' alt='').left-img
+                +e.top-left
+                  +e.head
+                    +e('h3') Главный механик, помощник руководителя
+                    +e('p').status.vr-head Онлайн
+                  +e('span').price 260-400 EUR
+                  +e('p').name Бакланов Роман · 28 лет · Донецк
+                  +e('p').employment частичная занятость, проектная работа, полная занятость
+                  +e('p').last-work Последнее место работы
+                  +e('p').name-work Инженер-проектировщик, ООО Альфа Алюминий,
+                  +e('p').date-work Октябрь 2018 — по настоящее время
+                  +e('p').last-check Обновлено 15 апреля, 14:11
+              +e.bottom
+                +e.soc
+                  +e('p') Написать соискателю в сетях
+                  +e.soc-block
                     +b('a')(href='#').vk-bg
                       +e('img')(src='assets/images/vk.svg' alt='')
                     +b('a')(href='#').ok-bg
@@ -141,7 +148,33 @@ mixin all-vacancies()
                       +e('img')(src='assets/images/fb.svg' alt='')
                     +b('a')(href='#').inst-bg
                       +e('img')(src='assets/images/instagram.svg' alt='')
-                  a(href='single-vacancy.html').btn-card.btn-red.mt5.mb5.ml15 Посмотреть полностью
+                //+e('button').save Сохранить в отклики
+            +b.single-card-resume
+              +e.top
+                +e.top-left
+                  +e.head
+                    +e('h3') Главный механик, помощник руководителя
+                    +e('p').status.vr-head Онлайн
+                  +e('span').price 260-400 EUR
+                  +e('p').name Бакланов Роман · 28 лет · Донецк
+                  +e('p').employment частичная занятость, проектная работа, полная занятость
+                  +e('p').last-work Последнее место работы
+                  +e('p').name-work Инженер-проектировщик, ООО Альфа Алюминий,
+                  +e('p').date-work Октябрь 2018 — по настоящее время
+                  +e('p').last-check Обновлено 15 апреля, 14:11
+              +e.bottom
+                +e.soc
+                  +e('p') Написать соискателю в сетях
+                  +e.soc-block
+                    +b('a')(href='#').vk-bg
+                      +e('img')(src='assets/images/vk.svg' alt='')
+                    +b('a')(href='#').ok-bg
+                      +e('img')(src='assets/images/ok.svg' alt='')
+                    +b('a')(href='#').fb-bg
+                      +e('img')(src='assets/images/fb.svg' alt='')
+                    +b('a')(href='#').inst-bg
+                      +e('img')(src='assets/images/instagram.svg' alt='')
+                //+e('button').save Сохранить в отклики
           +b.soc-sidebar#sidebar-vr
             .sidebar-inner
               +b('p').vr-head Прямой эфир
