--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -51,6 +51,7 @@ mixin home()
           +e('nav').nav
             +e('a').nav-item(href='index.html') Главная
             +e('a').nav-item(href='resume.html') Резюме
+            +e('a').nav-item(href='all-resume.html') Поиск резюме
             +e('button').nav-item.jsLogin Вход
           +e.main-email.d-flex.align-items-center
             +e('span').main-ico @
