--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -221,7 +221,7 @@
         @media (max-width: 577px)
           margin-left: 0 !important
 
-        &:before
+        &:first-child:before
           position: absolute
           top: 0
           left: -10px
