--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -52,7 +52,12 @@ mixin home()
             +e('a').nav-item(href='index.html') Главная
             +e('a').nav-item(href='resume.html') Резюме
             +e('a').nav-item(href='all-resume.html') Поиск резюме
-            +e('button').nav-item.jsLogin Вход
+            //+e('button').nav-item.jsLogin Вход
+            +b.dropdown.jsMenu
+                            +b('span').home__nav-item.jsOpenMenu User
+                            +e.menu.jsShowMenu
+                              +b('a')(href='/personal-area').home__nav-item Личный кабинект
+                              +b('a')(href='/personal-area').home__nav-item Выйти
           +e.main-email.d-flex.align-items-center
             +e('span').main-ico @
             a(href='mailto:info@vendoram.ru') info@vendoram.ru
