--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -348,10 +348,11 @@
     border-radius: 20px
     cursor: pointer
   &__nav
+    display: flex
+    align-items: center
     margin-left: 8%
     margin-right: 80px
     @media (max-width: 1350px)
-      display: flex
       justify-content: flex-start
       width: 100%
       margin-left: 35px
